--- a/170110.adoc
+++ b/170110.adoc
@@ -6,3 +6,11 @@
 암시적 바인딩 : obj.val() 같이 obj 로 this 가 바인딩 되는 것.
 명시적 바인딩(call, apply, bind)
 
+18.2
+
+자바스크립트 개발자가 여러가지 방법을 섞어서 this 를 사용하는 것은 별로 이롭지 않다 !!
+그 메서드가 정의된 개겣 대신 참조체를 통해 실행하면 그만큼 실패할 가능성이 커지게 마련!
+
+
+
+call 과 apply 는 하는 일이 같다 두 메서드는 주어진 컨텍스트 객체에 this 를 바인딩하고
