--- a/17년_02_52주차.adoc
+++ b/17년_02_52주차.adoc
@@ -4,9 +4,10 @@
 
 월욜 : JS 패턴 공부
 화욜 : 1시간 반정도 공부. JS 패턴. 보안 공부 ( 싱글톤 패턴 , )
-수욜 : Slipp 스터디
+수욜 : Slipp 스터디. 스터디 일정 잡다.
 목욜 :
 금욜 : 아침에 공부 해야 할듯 ?
+
 
 
 # 상세
