17 01 13 주식 투자 스터디하였다.

--- a/17년_02_52주차.adoc
+++ b/17년_02_52주차.adoc
@@ -6,7 +6,10 @@
 화욜 : 1시간 반정도 공부. JS 패턴. 보안 공부 ( 싱글톤 패턴 , )
 수욜 : Slipp 스터디. 스터디 일정 잡다.
 목욜 :
-금욜 : 아침에 공부 해야 할듯 ?
+금욜 : 아침에 공부 해야 할듯 ?.. 주식투자 스터디하였다
+토욜 :
+일욜 :
+
 
 
 
