쩝.. 30분 늦기전에 커밋..

--- a/17년_03_52주차.adoc
+++ b/17년_03_52주차.adoc
@@ -3,14 +3,12 @@
 ### 업무
 
 월욜 : 프라미스 패턴
-화욜 :
-수욜 :
+화욜 : 머신러닝 - 파이썬 3 설치 삽질 약간. 넘파이.. 조금.. 내일은 좀 더 빡시게 해보장.ㅋ
+수욜 : 머신러닝 공부하다.. 
 목욜 :
 금욜 :
 토욜 :
 일욜 :
-
-
 
 
 # 상세
