--- a/17년_03_52주차.adoc
+++ b/17년_03_52주차.adoc
@@ -1,15 +1,16 @@
 # 2017 3/52 주차 공부 정리와 느낌
 
+1월 15~21일..
+
 ### 업무
 
 월욜 : 프라미스 패턴
 화욜 : 머신러닝 - 파이썬 3 설치 삽질 약간. 넘파이.. 조금.. 내일은 좀 더 빡시게 해보장.ㅋ
-수욜 : 머신러닝 공부하다.. 
-목욜 :
-금욜 :
-토욜 :
+수욜 : 머신러닝 공부하다 - 넘파이와 맷플롯
+목욜 : 머신러닝 - 퍼셉트론 , 데이터 과학 (친구 추천.. )
+금욜 : 데이터 과학 약간-_- 일 많이 함.
+토욜 : 머신러닝. AWS 세미나 참여.
 일욜 :
-
 
 # 상세
 // -------
@@ -62,3 +63,5 @@ setTimeout(=>promise.then(=>...), 4000)
 
 
 
+목요일 : 데이터 과학
+https://github.com/insight-book/data-science-from-scratch
