--- a/17년_03_52주차.adoc
+++ b/17년_03_52주차.adoc
@@ -10,7 +10,17 @@
 목욜 : 머신러닝 - 퍼셉트론 , 데이터 과학 (친구 추천.. )
 금욜 : 데이터 과학 약간-_- 일 많이 함.
 토욜 : 머신러닝. AWS 세미나 참여.
-일욜 :
+일욜 : ml
+
+
+컴퓨터 공부 2시간 이상, 디자인, 재무, 영어
+
+1은 완료
+2는 책한권 읽음
+3 디자인 .. 절반 ㅋㅋ
+4 폭망.ㅋㅋ
+
+
 
 # 상세
 // -------
