--- a/2017/01/3주차/21_365.adoc
+++ b/2017/01/3주차/21_365.adoc
@@ -34,5 +34,22 @@ b는 편향을 나타내는 매개변수 뉴런이 얼마나 쉽게 활성화되
 70p:
 넘파이 배열의 자료형을 변환할 때는 astype() 메서드를 이용
 
+71p~73p : 계단함수를 그래프로 그려봄. 시그모이드를 구현해봄..
+시그모이드란 s 자 그래프..
 
-71p : 계단함수를 그래프로 그려봄.
+75p :
+계단함수와 시그모이드 함수의 공통점은 비선형함수. 신경망에서는 선형함수를 사용해서는 안된다.
+선형은 아무리 깊게 해도 선형으로 만들 수 있다...
+
+76p : ReLu
+
+78p : 배열의 차원수는 np.ndim() 으로 알 수 있다.
+배열의 형상은 shape 로 알 수 있다.
+
+79p: 행렬곱 np.dot(A,B)
+
+
+
+
+
+
