6주차 공부 추가

--- a/17년_06_52주차.adoc
+++ b/17년_06_52주차.adoc
@@ -1,16 +1,16 @@
 # 2017 4/52 주차 공부 정리와 느낌
 
-2월 5일 ~ 2월 4일..
+2월 5일 ~ 2월 11일..
 
 ### 업무
 
 일욜 :
-월욜 :
+월욜 : js 스터디
 화욜 :
-수욜 :
-목욜 :
+수욜 : 머신러닝 공부 ( 4시간 이상함)
+목욜 : 머신러닝 공부 ( 2 시간 스터디 )
 금욜 : 워렌 버핏 아이 투자...
-토욜 :
+토욜 : 자격증 공부로 대체. 6시간 이상 함.
 
 
 ---
